Remove deprecated features
Also update to micro 0.65.

Better new year!

Breaking changes:

* Remove outdated updates
* Update to micro 0.65

--- a/client/index.html
+++ b/client/index.html
@@ -161,8 +161,8 @@
             project-title="Open Listling" project-url="https://github.com/noyainrain/listling"
             project-icon="{{ static_url('images/listling.svg') }}" project-license="AGPL"
             project-license-url="https://www.gnu.org/licenses/agpl.html"
-            project-copyright="Copyright © 2020 Open Listling contributors">
-        </micro-about-page>
+            project-copyright="Copyright © 2021 Open Listling contributors"
+        ></micro-about-page>
     </template>
 
     <template class="listling-list-page-template">
