Fix list total printing insignificant digits
Also update to micro 0.66.

Close #110.

--- a/client/index.html
+++ b/client/index.html
@@ -394,7 +394,7 @@
                         </template>
                     </td>
                     <td>
-                        <span data-content="entry.1"></span>
+                        <span data-content="formatNumber entry.1"></span>
                         <span data-content="lst.value_unit"></span>
                     </td>
                 </tr>
@@ -803,7 +803,7 @@
                     </dt>
                     <dd class="micro-panel">
                         <p class="micro-panel-main listling-item-mode-view">
-                            <span data-content="item.value"></span>
+                            <span data-content="formatNumber item.value"></span>
                             <span data-content="lst.value_unit"><span>
                         </p>
                         <input
